--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "red_social",
   "version": "1.0.0",
-  "description": "Proyeto de programacion Web, Red Social Quahul",
+  "description": "Proyeto de Seguridad de Entorno de Desarollo",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "chat": "nodemon /src/server.js"
   },
   "author": "Cristian Alfaro",
